correct spacing on overlay elements on bottom of contact

--- a/src/components/sections/Contact.css
+++ b/src/components/sections/Contact.css
@@ -87,7 +87,7 @@
   width: 100%;
   height: 155.3px;
   position: absolute;
-  bottom: 5px;
+  bottom: 1px;
   left: 0;
 }
 
@@ -96,7 +96,7 @@
   width: 100%;
   height: 159.3px;
   position: absolute;
-  bottom: -18px;
+  bottom: -22px;
   left: 0;
 }
 
@@ -105,6 +105,6 @@
   width: 100%;
   height: 153.1px;
   position: absolute;
-  bottom: -38px;
+  bottom: -34px;
   left: 0;
 }
